[package]
name = "pnf_cli_sem"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
reedline = "0.38.0"
serde = "1.0.216"
serde_json = "1.0" 
chrono = "0.4"
rustyline = "15.0" 
ipnetwork = "0.20.0"
lazy_static = "1.4"
regex = "1.7.1"
sha2 = "0.10"
rpassword = "7.3.1"
ctrlc = "3.2.0"